2003-10-07  JMB  Enum editor bugfix

    Until now, deleting two options in the enum editor before clicking "OK"
    had a good chance of crashing PortaBase; fixed it to work properly.

2003-10-06  JMB  Image columns

    There is now an "Image" column type; each entry in such a column is
    either empty or contains a copy of a JPEG or PNG image.  These images
    can be seen in the row viewer, by clicking on a "View" button in the
    row editor, and via a click-and-hold on an icon in the data viewer.

2003-09-15  JMB  Date picker enhancements

    Changed the date picker so it is sized according to the size of the
    current font (especially important on the C7x0 models, where the fixed
    size was really too small).

    Also changed it to highlight the current date, and added a "Today"
    button to automatically jump to that date.

2003-09-12  JMB  Default rows per page preference, file properties dialog

    There is now a spinbox in the preferences dialog which lets you set the
    default number of rows per page to use for new views.

    There is also a new file properties dialog which gives basic statistics
    about the current file (name, file size, number of rows, etc.)

2003-09-11  JMB  CSV import enhancement, save/restore window geometry

    During CSV import, a blank in an integer or decimal column now gets
    replaced with the default value for that column.  Some other database
    programs seem to allow blanks in number fields, so this should help
    import data from those.

    The desktop versions now save the location and size of the main window
    when PortaBase is closed and restore them when it is launched again.

2003-09-10  JMB  Menu shortcuts and accelerators in desktop versions

    Added shortcuts (underlined letters which activate the item when that
    key is pressed on the keyboard) and accelerators (like "Ctrl-N") for
    menu items where appropriate in the desktop versions.  The Zaurus